# predcit_main

./: README.md  main.py  pyproject.toml
data/analytics/: database.db
data/education-platform/: cursos.csv  cursos_episodios.csv  cursos_episodios_completos.csv  recompensas_usuarios.csv  usuarios_tmw.csv
data/loyalty-system/: clientes.csv
src/analytics/: dau.sql  exec_life_cycle.py  exec_query.py  frequencia_valor.py  frequencia_valor.sql  fs_education.sql  fs_life_cycle.sql  fs_transacional.sql  life_cycle.sql  mau.sql  target.sql  train.py
